Use MapStruct and various renaming
* Trying out if MapStruct helps in any way. Currently just mapping API responses.
* Renaming for better readability.
* Use dev Micronaut environment for logging level changing. Lesser chance of leaking too low levels to prod environment.
